# NTP-client

./: CMakeLists.txt  main.cpp
include/: ntp_client.hpp
src/: ntp_client.cpp
